networkpolicy/networkpolicy__basic_kafka_setup__grafana__all__grafana__ingress__ports__grafana__nr48__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana--all--grafana--ingress--ports--grafana--nr48
  namespace: grafana
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: grafana
